fix: z-index

--- a/static/css/_landing-binary.scss
+++ b/static/css/_landing-binary.scss
@@ -20,6 +20,9 @@ $header-color : #333333;
   }
 }
 
+.navigation-to-deriv {
+  z-index: 100;
+}
 
 .navigation {
   display: block;
